# no2grm

./: CMakeLists.txt  README.md  main.cpp  nono_file_spec.md
include/: bounds.h  colors.h  grid.h  rules.h  state.h
include/states/: create.h  home.h
src/: bounds.cpp  grid.cpp  main.cpp
src/states/: create.cpp  home.cpp
